fix:project toggle spacing and general page spacing

--- a/app/Homepage/css/projects/project.css
+++ b/app/Homepage/css/projects/project.css
@@ -1,17 +1,16 @@
 .projects-component{
   z-index: 50;
+  border:1px dotted blue;
   height: 10vh;
+
 
 }
 
-
 .projects-container {
   display: flex;
-  height: 10;
-  opacity: 0;
-  background-color: #0a0a0a;
+  height: 0vh;
   box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 4px 0px inset;
-  height: 1px dotted red;
+  background-color: #0a0a0a;
 }
 
 
@@ -30,6 +29,7 @@
 
   box-shadow: 0px 20px 50px -10px rgba(0, 0, 0, 0.2);
   overflow-y: hidden;
+  
 }
 
 .circle {
@@ -56,6 +56,7 @@
   align-items: center;
   padding-left: 2.5%;
   padding-right: 7.5%;
+  
 
 }
 
