--- a/app/globals.css
+++ b/app/globals.css
@@ -67,3 +67,11 @@ p {
   font-size: 1.5rem;
   color: white;
 }
+
+body {
+ background-color: #0a0a0a;
+ height: 100vh;
+ width: 100vw;
+ padding: 0;
+ margin:0;
+}
