--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,24 +1,15 @@
-
 .maincontent{
-  height: 100vh;
-
-  display: flex;
-  flex-direction: column;
-
+  height: fit-content;
 }
 
-
 .landingcontainer{
-  height: 90%;
-  width: 100%;
-
-  
+  height: 90vh;
+  margin: 0;
 
 }
 .projectcontainer {
- height: 10%;
- width: 100%;
-
+  height: 10vh;
+  margin: 0;
 }
 
 
